# flower

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/2d_gaussians/: 3d_trajectories.ipynb  README.md  benchmark.ipynb  data.py  distance_trajectory.ipynb  information_trajectory.ipynb  model.py  train.py
examples/2d_gaussians/checkpoints/: cond_fm.pth
examples/dsprites/: README.md  scaling.ipynb
examples/dsprites/results/: bvae_results.npz  flower_results.npz  uncond_results.npz
examples/mnist/: README.md  benchmark.ipynb  beta_ablation.ipynb  r_g_ablation.ipynb  rotation.ipynb  style_transfer.ipynb  submit_tsne.sh  tsne_embed.py  tsne_image_plots.ipynb
examples/spectra/: README.md  benchmark.ipynb  flower_benchmark.py  resid_benchmark.py  submit_flower.sh  submit_resid.sh  submit_umap.sh  umap_benchmark.py
src/conf/data/: dsprites.yaml  rgbmnist.yaml  sdss.yaml
src/conf/experiment/dsprites_Flow/: embed.yaml  meta.yaml  model.yaml  stat_tests.yaml  sweeps.yaml  train.yaml
src/conf/experiment/dsprites_VAE/: embed.yaml  meta.yaml  model.yaml  train.yaml
src/conf/experiment/rgbmnist_Flow/: embed.yaml  meta.yaml  model.yaml  sweeps.yaml  train.yaml
src/conf/experiment/rgbmnist_Flow_beta_ablation/: embed.yaml  meta.yaml  sweeps.yaml  train.yaml
src/conf/experiment/rgbmnist_VAE/: embed.yaml  meta.yaml  model.yaml  sweeps.yaml  train.yaml
src/conf/experiment/spender_II_flow/: embed.yaml  meta.yaml  model.yaml  train.yaml
src/conf/experiment/spender_I_flow/: embed.yaml  meta.yaml  model.yaml  train.yaml
src/conf/hydra/launcher/: hpc.yaml
src/flower/: README.md  __init__.py  utilities.py
src/flower/data/: augmentations.py  dsprites.py  embeddings.py  jhu_test.py  modules.py  rgbmnist.py  sdss.py
src/flower/evaluation/: benchmarks.py  metrics.py
src/flower/inference/: embed.py  modules.py
src/flower/models/: dsprites.py  modules.py  rgbmnist.py  spectra.py
src/flower/training/: lightning_loaders.py  test.py  train.py
